NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/CONTAINER_External__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_External__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is being used for CONTAINER Knowledge Users.</description>
    <label>External</label>
    <type>Checkbox</type>
</CustomField>