NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/CONTAINER_Internal__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is being used for CONTAINER Knowledge Users.</description>
    <label>Internal</label>
    <type>Checkbox</type>
</CustomField>