NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/CONTAINER_Question_Answer__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Question_Answer__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>