NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/CONTAINER_Year__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Year__c</fullName>
    <description>This field is going to used for CONTAINER Year to capture year.</description>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>