NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/CTBR_Dealer__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Dealer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CTBR Dealer</label>
    <type>Checkbox</type>
</CustomField>