NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/CTM_Dealer_Region_1__c.field-meta.xml
<CustomField>
    <fullName>CTM_Dealer_Region_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates this field should be viewable by Region 1 - Mexico Dealers</description>
    <label>CTM Dealer Region 1</label>
    <type>Checkbox</type>
</CustomField>