NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/CTM_Dealer_Region_2__c.field-meta.xml
<CustomField>
    <fullName>CTM_Dealer_Region_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates this field should be viewable by Region 2 - Central America and Caribbean Dealers</description>
    <label>CTM Dealer Region 2</label>
    <type>Checkbox</type>
</CustomField>