NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/CTM_Dealer_Region_3__c.field-meta.xml
<CustomField>
    <fullName>CTM_Dealer_Region_3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates this field should be viewable by Region 3 - South America Dealers</description>
    <label>CTM Dealer Region 3</label>
    <type>Checkbox</type>
</CustomField>