NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/MX_Mexico_Dealer__c.field-meta.xml
<CustomField>
    <fullName>MX_Mexico_Dealer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates this field should be viewable by Mexico dealers</description>
    <label>CTM Dealer</label>
    <type>Checkbox</type>
</CustomField>