NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/MX_Mexico_Internal__c.field-meta.xml
<CustomField>
    <fullName>MX_Mexico_Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if this record should be viewable by internal mexico users.</description>
    <label>CTM Internal</label>
    <type>Checkbox</type>
</CustomField>