NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/NATT_Associate__c.field-meta.xml
<CustomField>
    <fullName>NATT_Associate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NATT</description>
    <label>Associate</label>
    <type>Checkbox</type>
</CustomField>