NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/NATT_Dealer_News__c.field-meta.xml
<CustomField>
    <fullName>NATT_Dealer_News__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer News</label>
    <type>Checkbox</type>
</CustomField>