NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/NATT_Dealer_Principal__c.field-meta.xml
<CustomField>
    <fullName>NATT_Dealer_Principal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NATT</description>
    <inlineHelpText>If Dealer principal is checked, cannot check dealer, associate or customer</inlineHelpText>
    <label>Dealer Principal Only</label>
    <type>Checkbox</type>
</CustomField>