NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/NATT_Department__c.field-meta.xml
<CustomField>
    <fullName>NATT_Department__c</fullName>
    <description>NATT</description>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Unit Sales</fullName>
            </value>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Product Mgt</fullName>
            </value>
            <value>
                <fullName>Dealer Network</fullName>
            </value>
            <value>
                <fullName>Product Marketing</fullName>
            </value>
            <value>
                <fullName>BluEdge</fullName>
                <isActive>false</isActive>
                <label>BluEdge</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
                <isActive>false</isActive>
                <label>Marketing</label>
            </value>
            <value>
                <fullName>Service Engineering</fullName>
                <isActive>false</isActive>
                <label>Service Engineering</label>
            </value>
            <value>
                <fullName>Training</fullName>
                <isActive>false</isActive>
                <label>Training</label>
            </value>
            <value>
                <fullName>Warranty</fullName>
                <isActive>false</isActive>
                <label>Warranty</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>