NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/NATT_Direct_Sales__c.field-meta.xml
<CustomField>
    <fullName>NATT_Direct_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Direct Sales contact requires access to view KB article in the Community</description>
    <inlineHelpText>Check if Direct Sales contact requires access to view KB article in the Community</inlineHelpText>
    <label>NATT Direct Sales</label>
    <type>Checkbox</type>
</CustomField>