NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/NATT_Doc_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Doc_Number__c</fullName>
    <label>Doc Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>