NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/NATT_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Document_Type__c</fullName>
    <description>NATT</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Branding</fullName>
            </value>
            <value>
                <fullName>Bulletins</fullName>
            </value>
            <value>
                <fullName>Diagrams/Schematics</fullName>
            </value>
            <value>
                <fullName>Fast Facts</fullName>
            </value>
            <value>
                <fullName>Field Programs</fullName>
            </value>
            <value>
                <fullName>Field Trial Programs</fullName>
            </value>
            <value>
                <fullName>Follow the Fleet Programs</fullName>
            </value>
            <value>
                <fullName>Formalized Concession Agreements</fullName>
            </value>
            <value>
                <fullName>Forms</fullName>
            </value>
            <value>
                <fullName>Instructions</fullName>
            </value>
            <value>
                <fullName>Literature</fullName>
            </value>
            <value>
                <fullName>Manuals – Diagnostic and Maintenance</fullName>
            </value>
            <value>
                <fullName>Manuals – Engine</fullName>
            </value>
            <value>
                <fullName>Manuals – Installation</fullName>
            </value>
            <value>
                <fullName>Manuals – Operation and Service</fullName>
            </value>
            <value>
                <fullName>Manuals – Operator</fullName>
            </value>
            <value>
                <fullName>Manuals – Parts</fullName>
            </value>
            <value>
                <fullName>Product Guides</fullName>
            </value>
            <value>
                <fullName>Product Presentation</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>TechLINE</fullName>
            </value>
            <value>
                <fullName>Tools</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Videos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>