NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/NATT_eFlash__c.field-meta.xml
<CustomField>
    <fullName>NATT_eFlash__c</fullName>
    <defaultValue>false</defaultValue>
    <label>eFlash</label>
    <type>Checkbox</type>
</CustomField>