NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/NATT_Internal__c.field-meta.xml
<CustomField>
    <fullName>NATT_Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NATT</description>
    <label>Internal</label>
    <type>Checkbox</type>
</CustomField>