NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/NATT_Parts_Bulletin__c.field-meta.xml
<CustomField>
    <fullName>NATT_Parts_Bulletin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parts Bulletin</label>
    <type>Checkbox</type>
</CustomField>