NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/NATT_Product_Manual_Updates__c.field-meta.xml
<CustomField>
    <fullName>NATT_Product_Manual_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Manual Updates</label>
    <type>Checkbox</type>
</CustomField>