NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/NATT_Search_Key_Words_Meta_tags__c.field-meta.xml
<CustomField>
    <fullName>NATT_Search_Key_Words_Meta_tags__c</fullName>
    <label>Search Key Words/Meta-tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>