NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/NATT_Segment__c.field-meta.xml
<CustomField>
    <fullName>NATT_Segment__c</fullName>
    <description>NATT</description>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administrative &amp; Policy</fullName>
            </value>
            <value>
                <fullName>BluEdge</fullName>
            </value>
            <value>
                <fullName>Dealer Required Parts/Tools</fullName>
            </value>
            <value>
                <fullName>Dealer Sales Toolkit</fullName>
            </value>
            <value>
                <fullName>Lynx Fleet</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Product Service</fullName>
            </value>
            <value>
                <fullName>Regulatory</fullName>
            </value>
            <value>
                <fullName>Technical Documentation</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>