NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/NATT_Service_Bulletin__c.field-meta.xml
<CustomField>
    <fullName>NATT_Service_Bulletin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Bulletin</label>
    <type>Checkbox</type>
</CustomField>