NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/NATT_Training_Bulletin__c.field-meta.xml
<CustomField>
    <fullName>NATT_Training_Bulletin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Training Bulletin</label>
    <type>Checkbox</type>
</CustomField>