NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/NATT_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Bulletin</fullName>
            </value>
            <value>
                <fullName>Parts Bulletin</fullName>
            </value>
            <value>
                <fullName>Product Guide</fullName>
            </value>
            <value>
                <fullName>Service Bulletin</fullName>
            </value>
            <value>
                <fullName>Technical Instructions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>