NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/UCP_Software_Release__c.field-meta.xml
<CustomField>
    <fullName>UCP_Software_Release__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Software Release</label>
    <type>Checkbox</type>
</CustomField>