NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/fields/UCP_Summary__c.field-meta.xml
<CustomField>
    <fullName>UCP_Summary__c</fullName>
    <label>Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>