NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/recordTypes/CAP.recordType-meta.xml
<RecordType>
    <fullName>CAP</fullName>
    <active>true</active>
    <description>This can be used for CONTAINER CAP Articles.</description>
    <label>CAP</label>
</RecordType>