NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/recordTypes/CONTAINER.recordType-meta.xml
<RecordType>
    <fullName>CONTAINER</fullName>
    <active>true</active>
    <description>This can be used for CONTAINER related Articles.</description>
    <label>CONTAINER</label>
</RecordType>