NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/recordTypes/CONTAINER_FAQ.recordType-meta.xml
<RecordType>
    <fullName>CONTAINER_FAQ</fullName>
    <active>true</active>
    <description>This can be used for CONTAINER FAQ Articles.</description>
    <label>CONTAINER FAQ</label>
</RecordType>