NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/recordTypes/CTBR.recordType-meta.xml
<RecordType>
    <fullName>CTBR</fullName>
    <active>true</active>
    <label>CTBR</label>
</RecordType>