NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/recordTypes/MX.recordType-meta.xml
<RecordType>
    <fullName>MX</fullName>
    <active>true</active>
    <description>For Carrier Transicold - Mexico Knowledge Articles</description>
    <label>CTM</label>
</RecordType>