NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/recordTypes/NATT.recordType-meta.xml
<RecordType>
    <fullName>NATT</fullName>
    <active>true</active>
    <label>NATT</label>
</RecordType>