NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/recordTypes/UCP_Container.recordType-meta.xml
<RecordType>
    <fullName>UCP_Container</fullName>
    <active>true</active>
    <label>UCP Container</label>
</RecordType>