NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/validationRules/NATT_Dealer_Principal.validationRule-meta.xml
<ValidationRule>
    <fullName>NATT_Dealer_Principal</fullName>
    <active>true</active>
    <description>If Dealer principal is checked, cannot check dealer, associate or customer.</description>
    <errorConditionFormula>AND(NATT_Dealer_Principal__c = True, (OR(NOT(NATT_Dealer__c = FALSE), (NOT(NATT_Associate__c = FALSE)), (NOT(NATT_Customer__c = FALSE)))))</errorConditionFormula>
    <errorMessage>You already selected Dealer Principal, Dealer, Associated or Customer cannot be selected.</errorMessage>
</ValidationRule>