NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/validationRules/Provide_Valid_Year_for_CONTAINER_Article.validationRule-meta.xml
<ValidationRule>
    <fullName>Provide_Valid_Year_for_CONTAINER_Article</fullName>
    <active>true</active>
    <description>This validation is to check whether Year is in proper format.</description>
    <errorConditionFormula>AND(
NOT($Permission.CONTAINER_Bypass_Validation_Rule ),
OR(Not(ISNUMBER(CONTAINER_Year__c)),
LEN(CONTAINER_Year__c) &lt;&gt; 4),
OR($RecordType.Name = &quot;CONTAINER FAQ&quot;,
OR($RecordType.Name = &quot;CAP&quot;, 
$RecordType.Name = &quot;CONTAINER&quot;))
)</errorConditionFormula>
    <errorMessage>Please enter a valid Year.</errorMessage>
</ValidationRule>