NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/listViews/All_Knowledge_Articles.listView-meta.xml
<ListView>
    <fullName>All_Knowledge_Articles</fullName>
    <columns>RECORDTYPE</columns>
    <columns>TITLE</columns>
    <columns>NATT_Department__c</columns>
    <columns>NATT_Segment__c</columns>
    <columns>NATT_Document_Type__c</columns>
    <columns>OWNER_ID</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ARTICLE_CREATED_DATE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Knowledge Articles</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Container_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Container_Service</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>