NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/listViews/archived_articles.listView-meta.xml
<ListView>
    <fullName>archived_articles</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>TITLE</columns>
    <columns>NATT_Doc_Number__c</columns>
    <columns>NATT_Department__c</columns>
    <columns>NATT_Document_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>URL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <filters>
        <field>URL_NAME</field>
        <operation>contains</operation>
    </filters>
    <label>Archived Articles</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Container_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Container_Service</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>NA</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>