NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/listViews/Container.listView-meta.xml
<ListView>
    <fullName>Container</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.CONTAINER</value>
    </filters>
    <label>Container</label>
</ListView>