NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/listViews/Container_Training.listView-meta.xml
<ListView>
    <fullName>Container_Training</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NATT_Document_Type__c</field>
        <operation>equals</operation>
        <value>Training</value>
    </filters>
    <label>Container Training</label>
</ListView>