NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/listViews/CTBR_Archived_Articles.listView-meta.xml
<ListView>
    <fullName>CTBR_Archived_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.CTBR</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <label>Artigos Arquivados</label>
    <sharedTo>
        <roleAndSubordinates>CTBR</roleAndSubordinates>
    </sharedTo>
</ListView>