NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/listViews/CTM_All_Knowledge.listView-meta.xml
<ListView>
    <fullName>CTM_All_Knowledge</fullName>
    <columns>TITLE</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>NATT_Department__c</columns>
    <columns>NATT_Segment__c</columns>
    <columns>NATT_Document_Type__c</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.MX</value>
    </filters>
    <label>Todos</label>
    <sharedTo>
        <roleAndSubordinatesInternal>CTM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>