NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/listViews/CTM_Published_Articles.listView-meta.xml
<ListView>
    <fullName>CTM_Published_Articles</fullName>
    <columns>TITLE</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>NATT_Department__c</columns>
    <columns>NATT_Segment__c</columns>
    <columns>NATT_Document_Type__c</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.MX</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>Artículos Publicados</label>
    <sharedTo>
        <roleAndSubordinates>CTM</roleAndSubordinates>
    </sharedTo>
</ListView>