NATTQA-ENV/force-app/main/default/objects/Knowledge__kav/listViews/Dealer_Sales_ToolKit_Documents.listView-meta.xml
<ListView>
    <fullName>Dealer_Sales_ToolKit_Documents</fullName>
    <columns>TITLE</columns>
    <columns>NATT_Doc_Number__c</columns>
    <columns>NATT_Year__c</columns>
    <columns>NATT_Department__c</columns>
    <columns>NATT_Document_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NATT_Segment__c</field>
        <operation>equals</operation>
        <value>Dealer Sales Toolkit</value>
    </filters>
    <label>Dealer Sales ToolKit Documents</label>
    <sharedTo>
        <roleAndSubordinates>NA</roleAndSubordinates>
        <roleAndSubordinates>NA_Parts_Manager</roleAndSubordinates>
        <roleAndSubordinates>NA_Parts_Sales</roleAndSubordinates>
        <roleAndSubordinates>NA_Units_Manager</roleAndSubordinates>
        <roleAndSubordinates>NA_Units_Sales</roleAndSubordinates>
    </sharedTo>
</ListView>